--- a/templates/html/recipe/recipe_list.html
+++ b/templates/html/recipe/recipe_list.html
@@ -48,7 +48,7 @@
             <hr>
             <form type="get" action="." id="searchform">
                 <div class="ui-widget">
-                    <input placeholder="Search for... " id="searchbar" name="q" value="{{ query }} ">
+                    <input placeholder="Search for... " id="searchbar" name="q" value="{{ query }}" autocomplete="off">
                        <button class="btn btn-default" type="submit">Go!</button>
                 </div><!-- /input-group -->
             </form>
