--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,3 +125,15 @@ textarea#id_description {
     text-align: center;
     padding: 0.5em;
 }
+
+
+.ui-autocomplete-category {
+    font-weight: bold;
+    padding: .2em .4em;
+    margin: .8em 0 .2em;
+    line-height: 1.5;
+    background-color: #2b669a;
+    color: white;
+  }
+
+.ui-autocomplete { height:  auto; overflow-y: scroll; overflow-x: hidden;}
